work: step by step 1

--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html test</title>
+    <title>Donald Duck CV</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-Html test
-<img src="assets/avatar.jpg" alt="Duck">
+
+<div class="wrapper">
+    <header>
+        <div class="image">
+            <img width="100"  src="assets/avatar.jpg" alt="Duck" class="avatar">
+        </div>
+       <div class="title">
+           <div class="name">Donald Duck</div>
+           <div class="profession">Web Entwickler</div>
+       </div>
+    </header>
+</div>
+
 </body>
 </html>
