work: step by step 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="wrapper">
     <header>
         <div class="image">
-            <img width="100"  src="assets/avatar.jpg" alt="Duck" class="avatar">
+            <img width="100"  src="assets/avatar-2.jpg" alt="Duck" class="avatar">
         </div>
        <div class="title">
            <div class="name">Donald Duck</div>
