work: step by step 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
            <div class="name">Donald Duck</div>
            <div class="profession">Web Entwickler</div>
        </div>
+
     </header>
+    <nav class="menu">
+        <span>example@email.com</span>
+        <span>+123456789</span>
+        <span>www.example.com</span>
+    </nav>
+    <div class="hr-line">
+
+    </div>
 </div>
 
 </body>
